<resources>
    <string name="app_name">PracticalTest01Var06</string>
    <string name="number">Number</string>
    <string name="play">Play</string>
    <string name="generate">GENERATE</string>
    <string name="guess">Guess</string>
    <string name="check">Check</string>
    <string name="score">SCORE</string>
    <string name="sc">score</string>
    <string name="back">Back</string>
</resources>
