<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PracticalTest01Var02PlayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">


            <Button
                android:id="@+id/b_generate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/generate" />

            <TextView
                android:id="@+id/edit_guess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/guess"/>

        </LinearLayout>


        <Button
            android:id="@+id/b_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/check" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/score" />

            <EditView
                android:id="@+id/edit_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/sc"/>

        </LinearLayout>

        <Button
            android:id="@+id/b_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/back" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>